# tank.io-server

./: .gitignore  CMakeLists.txt  Dockerfile  server_delegator.cpp  tank-io.server  tank.io-server2.pro
Classes/: MainServer.cpp  MainServer.h  Room.cpp  Room.h
Classes/GameCore/: AbstractTankViewHandler.cpp  AbstractTankViewHandler.h  BoardObject.cpp  BoardObject.h  BoardObjectEvent.cpp  BoardObjectEvent.h  CMakeLists.txt  GameCore.cpp  GameCore.h  Misle.cpp  Misle.h  PlatformLine.cpp  PlatformLine.h  Tank.cpp  Tank.h
Classes/GameCore/Ai/: ConstantPathFinderTankAi.cpp  ConstantPathFinderTankAi.h  RandomTankAi.cpp  RandomTankAi.h
Classes/GameCore/Ai/Ai/: GreedySimple.cpp  GreedySimple.h
Classes/GameCore/Ai/tools/: MapGraph.cpp  MapGraph.h
Classes/MathShapeUtils/: Base.cpp  Base.h  CMakeLists.txt  EditablePoint.cpp  EditablePoint.h  SegmentLine.cpp  SegmentLine.h
Classes/game_message/: Messages.cpp  Messages.h  chat.h  societalgaming.h
DB/: DBAccess.cpp  DBAccess.h
Engine/: BaseRoom.cpp  BaseRoom.h  BaseServer.cpp  BaseServer.h  Logger.cpp  Logger.h  SharedMemoryLoger.cpp  SharedMemoryLoger.h  install.sh  setup.py
base/: AsyncCyirCularBuffer.cpp  AsyncCyirCularBuffer.h  BoundedArray.cpp  BoundedArray.h  asyncmap.cpp  asyncmap.h  rbtree.h  rbtree.inl
base_message/: BaseMessage.h  jsonutils.cpp  jsonutils.h  metamessages.h
cocos2d_server/: CocoBase.h  CocoBase.inl  cocos2d_server.h
debuge_tools/: DebugeTools.cpp  DebugeTools.h
http/: beast_sample.cpp  connection.cpp  connection.hpp  main.cpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  server.cpp  server.hpp
